[package]
name = "r5ai"
version = "0.1.0"
authors = ["shirshak <shirshak55@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features=["full"] } 
futures = "0.3.5"
warp = "0.2.5"
tracing = "0.1.21"
clap = "2.33.3"
once_cell = "1.4.1"
tracing-subscriber = "0.2.12"
serde = {version = "1.0.115", features=["derive"]}
serde_json = "1.0.58"
toml = "0.5.6"
